# Huffman

./: README.md  huffman.cabal
src/: Decode.hs  Encode.hs  Huffman.hs  PQueue.hs  PreTree.hs  PrefixTree.hs  Types.hs  Weighted.hs
